# proj-fastapi-payments

./: README.md  docker-compose.yml  makefile  pyproject.toml
src/adapter/stripe_api/: __init__.py  customers.py  plan.py
src/adapter/stripe_api/customers/: __init__.py  api.py  dto.py
src/adapter/stripe_api/plans/: api.py  dto.py
src/proj_fastapi_payments/: app.py
src/proj_fastapi_payments/config/: setup.py
src/proj_fastapi_payments/controller/: payment.py
